completing the search function

--- a/Template/default/backend/form/list.contact.twig
+++ b/Template/default/backend/form/list.contact.twig
@@ -17,7 +17,7 @@
   {% else %}
     <div class="search-container">
       <form action="{{ FRAMEWORK_URL ~ route.contact.search }}" method="post" >
-        <input type="text" name="search" />&nbsp;<input type="submit" value="{{ 'Search'|trans }}" />
+        <input type="text" name="search" /><input type="submit" value="{{ 'Search'|trans }}" />
       </form>
     </div>
     {#  
