added meta tag 'generator'

--- a/Template/default/backend/admin/body.twig
+++ b/Template/default/backend/admin/body.twig
@@ -17,6 +17,7 @@
       <meta name="robots" content="noindex,nofollow" />
       <meta name="description" content="{% block description %}{% endblock %}" />
       <meta name="keywords" content="{% block keywords %}{% endblock %}" />
+      <meta name="generator" content="kitFramework (https://kit2.phpmanufaktur.de)" />
       {% block stylesheet %}
         <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/admin/css/backend.css" media="screen, projection" />
       {% endblock stylesheet %}
