changing to Bootstrap 3 is in progress ...

--- a/Template/default/backend/form/edit.company.contact.twig
+++ b/Template/default/backend/form/edit.company.contact.twig
@@ -59,7 +59,7 @@
     <fieldset>
       <legend>{{ 'Communication'|trans }}</legend>
       {{ form_row(form.email_id) }}
-      {{ form_row(form.email_value) }}
+      {{ form_row(form.email) }}
       {{ form_row(form.phone_id) }}
       {{ form_row(form.phone) }}
       {{ form_row(form.cell_id) }}
