--- a/Template/default/bootstrap/admin/edit.contact.twig
+++ b/Template/default/bootstrap/admin/edit.contact.twig
@@ -12,35 +12,52 @@
   {% set template_file = 'framework/body.twig' %}
 {% else %}
   {% set template_namespace = '@phpManufaktur/Contact/Template' %}
-  {% set template_file = 'backend/admin/body.twig' %}
+  {% set template_file = 'bootstrap/admin/body.twig' %}
 {% endif %}
 {% extends getTemplateFile(template_namespace, template_file) %}
-{% block title %}{{ 'Contact categories'|trans }}{% endblock %}
 {% block stylesheet %}
   {{ parent() }}
-  {% if extra.usage == 'framework' %}
-    <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/admin/css/backend.css" media="screen, projection" />
+  {% if form.contact_type.vars.value == 'PERSON' %}
+    <link rel="stylesheet" type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css" media="screen, projection" />
   {% endif %}
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/admin/css/contact.edit.css" media="screen, projection" />
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/admin/css/go.back.css" media="screen, projection" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/bootstrap/css/admin.min.css" media="screen, projection" />
 {% endblock stylesheet %}
+{% block title %}{{ 'Contact Administration - Create or edit contact'|trans }}{% endblock %}
+
 {% block content %}
-  <div id="contact_content">
-    {% include '@phpManufaktur/Contact/Template/default/backend/admin/toolbar.twig' with {toolbar: extra.toolbar} only %}
-    {% if message|length > 0 %}
-      <div class="message">{{ message }}</div>
-    {% endif %}
-
-    {% include '@phpManufaktur/Contact/Template/default/backend/admin/go.back.twig' with {
-      links: {
-        0: {
-          url: FRAMEWORK_URL ~ route.create,
-          text: 'Add category'
-        }
-      }
-    } only %}
-
-    {% include '@phpManufaktur/Contact/Template/default/backend/form/list.category.twig' %}
+  <div class="container">
+    
+    {% include '@phpManufaktur/Contact/Template/default/bootstrap/admin/toolbar.twig' with {toolbar: extra.toolbar} %}
+    
+    <div class="height-15"></div>
+    
+    {% include '@phpManufaktur/Contact/Template/default/bootstrap/pattern/admin/simple/edit.contact.twig' %}
 
   </div>
 {% endblock content %}
+{% block footer_jquery %}
+  {{ parent() }}
+  {% if form.contact_type.vars.value == 'PERSON' %}
+    <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/1.10.3/ui/minified/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="{{ LIBRARY_URL }}/jquery/ui/1.10.3/ui/i18n/jquery-ui-i18n.js"></script>
+  {% endif %}
+{% endblock footer_jquery %}
+{% block footer %}
+  {{ parent() }}
+  <script type="text/javascript">
+    if (typeof 'jQuery' !== 'undefined') {
+      $(document).ready(function() {
+        {% if form.contact_type.vars.value == 'PERSON' %}
+          $.datepicker.setDefaults($.datepicker.regional['{{ app.translator.locale }}']);
+          $('#form_person_birthday').datepicker({ 
+            changeMonth: true,
+            changeYear: true,
+            minDate: '-100Y',
+            maxDate: -1,
+            yearRange: '{{ ('now'|date('Y'))-100 }}:{{ 'now'|date('Y') }}'
+          });        
+        {% endif %}
+      });
+    }
+  </script>
+{% endblock footer %}
