--- a/Template/default/bootstrap/admin/edit.title.twig
+++ b/Template/default/bootstrap/admin/edit.title.twig
@@ -12,35 +12,27 @@
   {% set template_file = 'framework/body.twig' %}
 {% else %}
   {% set template_namespace = '@phpManufaktur/Contact/Template' %}
-  {% set template_file = 'backend/admin/body.twig' %}
+  {% set template_file = 'bootstrap/admin/body.twig' %}
 {% endif %}
 {% extends getTemplateFile(template_namespace, template_file) %}
-{% block title %}{{ 'Contact categories'|trans }}{% endblock %}
 {% block stylesheet %}
   {{ parent() }}
-  {% if extra.usage == 'framework' %}
-    <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/admin/css/backend.css" media="screen, projection" />
-  {% endif %}
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/admin/css/contact.edit.css" media="screen, projection" />
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/admin/css/go.back.css" media="screen, projection" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/bootstrap/css/admin.min.css" media="screen, projection" />
 {% endblock stylesheet %}
+{% block title %}{{ 'Contact Administration - Tags'|trans }}{% endblock %}
+
 {% block content %}
-  <div id="contact_content">
-    {% include '@phpManufaktur/Contact/Template/default/backend/admin/toolbar.twig' with {toolbar: extra.toolbar} only %}
-    {% if message|length > 0 %}
-      <div class="message">{{ message }}</div>
+  <div class="container">
+    
+    {% include '@phpManufaktur/Contact/Template/default/bootstrap/admin/toolbar.twig' with {toolbar: extra.toolbar} %}
+    
+    <div class="height-15"></div>
+    {% if form.title_id.vars.value > 0 %}
+      <h1>{{ 'Edit the title %title_identifier%'|trans({'%title_identifier%':form.title_identifier.vars.value}) }}</h1>
+    {% else %}
+      <h1>{{ 'Create a new title'|trans }}</h1>
     {% endif %}
-
-    {% include '@phpManufaktur/Contact/Template/default/backend/admin/go.back.twig' with {
-      links: {
-        0: {
-          url: FRAMEWORK_URL ~ route.create,
-          text: 'Add category'
-        }
-      }
-    } only %}
-
-    {% include '@phpManufaktur/Contact/Template/default/backend/form/list.category.twig' %}
+    {% include '@phpManufaktur/Contact/Template/default/bootstrap/pattern/admin/simple/edit.title.twig' %}
 
   </div>
 {% endblock content %}
