--- a/Template/default/bootstrap/pattern/admin/simple/list.category.twig
+++ b/Template/default/bootstrap/pattern/admin/simple/list.category.twig
@@ -7,8 +7,10 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
 
-<div id="contact_list">
-  <table>
+{{ alert }}
+
+<div class="table-responsive">
+  <table class="table table-striped table-condensed table-hover">
     <thead>
       <th>{{ 'ID'|trans }}</th>
       <th>{{ 'Category name'|trans }}</th>
@@ -17,16 +19,14 @@
       <th>{{ 'Category description (translated)'|trans }}</th>
     </thead>
     <tbody>
-      {% set i = 0 %}
       {% for category in categories %}
-        <tr class="{{ cycle(['flop','flip'], i) }}">
+        <tr>
           <td class="category_type_id"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{category_id}':category.category_type_id}) }}">{{ '%03d'|format(category.category_type_id) }}</a></td>
           <td class="category_type_name"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{category_id}':category.category_type_id}) }}">{{ category.category_type_name }}</a></td>
           <td class="category_type_name translated">{{ category.category_type_name|capitalize }} &rArr; {{ category.category_type_name|capitalize|trans }}</td>
           <td class="category_type_description">{{ category.category_type_description }}</td>
           <td class="category_type_description translated">{{ category.category_type_description|trans }}</td>            
         </tr>
-        {% set i = i+1 %}
       {% endfor %}
     </tbody>
   </table>    
