--- a/Template/default/bootstrap/pattern/admin/simple/list.contact.twig
+++ b/Template/default/bootstrap/pattern/admin/simple/list.contact.twig
@@ -7,33 +7,40 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
 
-<div id="contact_list">
-    
-  {% if (list|length < 1) %}
-    {# The contact list does not contain any data! #}
-    <div class="message">
-      {{ 'The contact list is empty.'|trans }}
-    </div>
-  {% else %}
-    <div class="search-container">
-      <form action="{{ FRAMEWORK_URL ~ route.contact.search }}" method="post" >
-        <input type="text" name="search" /><input type="submit" value="{{ 'Search'|trans }}" />
-      </form>
-    </div>
-    {#  
-        The pagination serve a automatic 1 2 3 ... 17 18 19 pagination and 
-        navigation for the table if it contain more rows than specified in: 
-        /Contact/Template/default/backend/simple/list.contact.json 
-        Changes here must be also done at the footer of the table !!!
-     #}  
-    {% include '@phpManufaktur/Contact/Template/default/backend/form/pagination.twig' with {
-      currentPage: current_page,
-      paginationPath: FRAMEWORK_URL ~ route.pagination|replace({'{order}':order_by|join(','), '{direction}':order_direction}),
-      lastPage: last_page,
-      showAlwaysFirstAndLast: true
-    } only %}
+{{ alert }}
 
-    <table>
+{% if (list|length < 1) %}
+  {# The contact list does not contain any data! #}
+  <div class="alert alert-warning">
+    <a class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</a>
+    {{ 'The contact list is empty.'|trans }}        
+  </div>
+{% else %}
+  <div class=" pull-right">
+    <form action="{{ FRAMEWORK_URL ~ route.contact.search }}" class="navbar-form navbar-left" role="form" method="post">
+      <div class="input-group search-contact-small">
+        <input class="form-control input-default" type="text" name="search" />
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+        </span>
+      </div>
+    </form>
+  </div> 
+  {#  
+      The pagination serve a automatic 1 2 3 ... 17 18 19 pagination and 
+      navigation for the table if it contain more rows than specified in: 
+      /Contact/Template/default/bootstrap/pattern/admin/simple/list.contact.json 
+      Changes here must be also done at the footer of the table !!!
+   #}  
+  {% include '@phpManufaktur/Contact/Template/default/bootstrap/pattern/admin/simple/pagination.twig' with {
+    currentPage: current_page,
+    paginationPath: FRAMEWORK_URL ~ route.pagination|replace({'{order}':order_by|join(','), '{direction}':order_direction}),
+    lastPage: last_page,
+    showAlwaysFirstAndLast: true
+  } only %}
+
+  <div class="table-responsive">
+    <table class="table table-striped table-condensed table-hover">
       <thead>
         <tr>  
           {# 
@@ -57,9 +64,9 @@
               {% endif %}  
               <th class="{{ head_class }}">
                 {% if 'active asc' in head_class %}
-                  <i class="fa fa-caret-down icon-padding"></i>
+                  <i class="fa fa-sort-alpha-asc"></i>&nbsp;
                 {% elseif 'active desc' in head_class %}
-                  <i class="fa fa-caret-up icon-padding"></i>
+                  <i class="fa fa-sort-alpha-desc"></i>&nbsp;
                 {% endif %}
                 <a href="{{ FRAMEWORK_URL ~ route.pagination|replace({'{page}':current_page, '{order}':head, '{direction}':head_order}) }}" title="{% if head_order == 'asc' %}{{ 'Click to sort column ascending'|trans }}{% else %}{{ 'Click to sort column descending'|trans }}{% endif %}">{{ head|trans }}</a>
               </th>  
@@ -68,9 +75,8 @@
         </tr>
       </thead>
       <tbody>
-        {% set i = 0 %}
         {% for contact in list %}
-          <tr class="{{ cycle(['flop','flip'], i) }}">
+          <tr>
             {% for column, value in contact %} 
               {% if column in columns %}
                 {% if column == 'contact_id' %}
@@ -91,20 +97,18 @@
               {% endif %}
             {% endfor %}
           </tr>
-          {% set i = i+1 %}
         {% endfor %}
       </tbody>
     </table>
+  </div>  
+  {#
+      See top of the table for more information!
+   #}
+  {% include '@phpManufaktur/Contact/Template/default/bootstrap/pattern/admin/simple/pagination.twig' with {
+    currentPage: current_page,
+    paginationPath: FRAMEWORK_URL ~ route.pagination|replace({'{order}':order_by|join(','), '{direction}':order_direction}),
+    lastPage: last_page,
+    showAlwaysFirstAndLast: true
+  } only %}
+{% endif %}
 
-    {#
-        See top of the table for more information!
-     #}
-    {% include '@phpManufaktur/Contact/Template/default/backend/form/pagination.twig' with {
-      currentPage: current_page,
-      paginationPath: FRAMEWORK_URL ~ route.pagination|replace({'{order}':order_by|join(','), '{direction}':order_direction}),
-      lastPage: last_page,
-      showAlwaysFirstAndLast: true
-    } only %}
-  {% endif %}
-  
-</div>
