--- a/Template/default/bootstrap/pattern/admin/simple/list.extra.twig
+++ b/Template/default/bootstrap/pattern/admin/simple/list.extra.twig
@@ -7,9 +7,16 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
 
-<div id="contact_list">
-  {% if fields|length > 0 %}
-    <table>
+{{ alert }}
+
+{% if fields|length < 1 %}
+  <div class="alert alert-warning">
+    <a class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</a>
+    {{ 'The field list is empty, please define a extra field!'|trans }}
+  </div>
+{% else %}
+  <div class="table-responsive">
+    <table class="table table-striped table-condensed table-hover">
       <thead>
         <tr>
           <th class="extra_type_id">{{ 'ID'|trans }}</th>
@@ -20,20 +27,16 @@
         </tr>
       </thead>
       <tbody>
-        {% set i = 0 %}
         {% for field in fields %}
-          <tr class="{{ cycle(['flop','flip'], i) }}">
+          <tr>
             <td class="extra_type_id"><a href="{{ FRAMEWORK_URL ~ route.edit|replace({'{type_id}':field.extra_type_id}) }}">{{ '%03d'|format(field.extra_type_id) }}</a></td>
             <td class="extra_type_name"><a href="{{ FRAMEWORK_URL ~ route.edit|replace({'{type_id}':field.extra_type_id}) }}">{{ field.extra_type_name }}</a></td>
             <td class="extra_type_name translated">{{ field.extra_type_name|replace({'_':' '})|capitalize|trans }}</td>
             <td class="extra_type_type">{{ field.extra_type_type|capitalize|trans }}</td>
             <td class="extra_type_description">{{ field.extra_type_description }}</td>
           </tr>
-          {% set i = i+1 %}
         {% endfor %}  
       </tbody>
     </table>
-  {% else %}
-    <p>{{ 'The field list is empty, please define a extra field!'|trans }}</p>
-  {% endif %}     
-</div>
+  </div>
+{% endif %}     
