--- a/Template/default/bootstrap/pattern/admin/simple/list.search.twig
+++ b/Template/default/bootstrap/pattern/admin/simple/list.search.twig
@@ -7,34 +7,39 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
 
-<div id="contact_list">
-    
-  <div class="message">
-    {% if message|length > 0 %}
-      {{ message }}
-    {% endif %}
-    {# hint for the general search functions #}
-    {% if app.translator.locale == 'de' %}
-      {# german translation #}
-      <div class="message item">Suchbegriffe die mit einem <i>Leerzeichen</i> oder dem <code>OR</code> Operator verknüpft werden, z.B. <code>berlin mustermann</code> finden Ergebnisse die zu einem <i>beliebigen</i> Begriff passen.</div>  
-      <div class="message item">Suchbegriffe die mit einem <code>AND</code> Operator verknüpft werden, z.B. <code>berlin AND mustermann</code> finden Ergebnisse die zu <i>beiden</i> Begriffen passsen</div>
-      <div class="message item">Suchbegriffe die mit einem <code>NOT</code> Operator verknüpft werden, z.B. <code>berlin NOT mustermann</code> finden Ergebnisse die zum ersten jedoch <i>nicht</i> zum zweiten Begriff passen.</div>
-    {% else %}
-      {# english translation #}
-      <div class="message item">Search terms joined with a <i>space</i> or the <code>OR</code> operator, i.e. <code>berlin mustermann</code> will return search results which fit to <i>any</i> of the terms.</div>  
-      <div class="message item">Search terms joined with a <code>AND</code> operator, i.e. <code>berlin AND mustermann</code> will return search results which fit to <i>both</i> terms.</div>
-      <div class="message item">Search terms joined with a <code>NOT</code> operator, i.e. <code>berlin NOT mustermann</code> will return search results which fit to the first but <i>not</i> to the second term.</div>
-    {% endif %}
-  </div>
-  
-  <div class="search-container">
-    <form action="{{ FRAMEWORK_URL ~ route.contact.search }}" method="post" >
-      <input type="text" name="search" />&nbsp;<input type="submit" value="{{ 'Search'|trans }}" />
-    </form>
-  </div>
+{{ alert }}
 
-  {% if (list|length > 0) %}
-    <table>
+<div class="alert alert-info">
+  <a class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</a>
+  {# hint for the general search functions #}
+  {% if app.translator.locale == 'de' %}
+    {# german translation #}
+    <div class="alert-item">Suchbegriffe die mit einem <i>Leerzeichen</i> oder dem <code>OR</code> Operator verknüpft werden, z.B. <code>berlin mustermann</code> finden Ergebnisse die zu einem <i>beliebigen</i> Begriff passen.</div>  
+    <div class="alert-item">Suchbegriffe die mit einem <code>AND</code> Operator verknüpft werden, z.B. <code>berlin AND mustermann</code> finden Ergebnisse die zu <i>beiden</i> Begriffen passsen</div>
+    <div class="alert-item">Suchbegriffe die mit einem <code>NOT</code> Operator verknüpft werden, z.B. <code>berlin NOT mustermann</code> finden Ergebnisse die zum ersten jedoch <i>nicht</i> zum zweiten Begriff passen.</div>
+  {% else %}
+    {# english translation #}
+    <div class="alert-item">Search terms joined with a <i>space</i> or the <code>OR</code> operator, i.e. <code>berlin mustermann</code> will return search results which fit to <i>any</i> of the terms.</div>  
+    <div class="alert-item">Search terms joined with a <code>AND</code> operator, i.e. <code>berlin AND mustermann</code> will return search results which fit to <i>both</i> terms.</div>
+    <div class="alert-item">Search terms joined with a <code>NOT</code> operator, i.e. <code>berlin NOT mustermann</code> will return search results which fit to the first but <i>not</i> to the second term.</div>
+  {% endif %}       
+</div>
+
+<div class=" pull-right">
+  <form action="{{ FRAMEWORK_URL ~ route.contact.search }}" class="navbar-form navbar-left" role="form" method="post">
+    <div class="input-group search-contact-small">
+      <input class="form-control input-default" type="text" name="search" />
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+      </span>
+    </div>
+  </form>
+</div> 
+<div class="clearfix"></div>
+
+{% if (list|length > 0) %}
+  <div class="table-responsive">
+    <table class="table table-striped table-condensed table-hover">
       <thead>
         <tr>  
           {% for head in list.0|keys %}
@@ -45,9 +50,8 @@
         </tr>
       </thead>
       <tbody>
-        {% set i = 0 %}
         {% for contact in list %}
-          <tr class="{{ cycle(['flop','flip'], i) }}">
+          <tr>
             {% for column, value in contact %} 
               {% if column in columns %}
                 {% if column == 'contact_id' %}
@@ -68,9 +72,8 @@
               {% endif %}
             {% endfor %}
           </tr>
-          {% set i = i+1 %}
         {% endfor %}
       </tbody>
     </table>
-  {% endif %}
-</div>
+  </div>
+{% endif %}
