--- a/Template/default/bootstrap/pattern/admin/simple/list.tag.twig
+++ b/Template/default/bootstrap/pattern/admin/simple/list.tag.twig
@@ -7,8 +7,10 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
 
-<div id="contact_list">
-  <table>
+{{ alert }}
+
+<div class="table-responsive">
+  <table class="table table-striped table-condensed table-hover">
     <thead>
       <th>{{ 'ID'|trans }}</th>
       <th>{{ 'Tag'|trans }}</th>
@@ -17,16 +19,14 @@
       <th>{{ 'Description (translated)'|trans }}</th>
     </thead>
     <tbody>
-      {% set i = 0 %}
       {% for tag in tags %}
-        <tr class="{{ cycle(['flop','flip'], i) }}">
+        <tr>
           <td class="tag_type_id"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{tag_id}':tag.tag_type_id}) }}">{{ '%03d'|format(tag.tag_type_id) }}</a></td>
           <td class="tag_name"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{tag_id}':tag.tag_type_id}) }}">{{ tag.tag_name|upper }}</a></td>
           <td class="tag_name translated">{{ tag.tag_name|capitalize }} &rArr; {{ tag.tag_name|trans }}</td>
           <td class="tag_description">{{ tag.tag_description }}</td>
           <td class="tag_description translated">{{ tag.tag_description|trans }}</td>
         </tr>
-        {% set i = i+1 %}
       {% endfor %}
     </tbody>
   </table>    
