--- a/Template/default/bootstrap/pattern/admin/simple/list.title.twig
+++ b/Template/default/bootstrap/pattern/admin/simple/list.title.twig
@@ -7,8 +7,8 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
 
-<div id="contact_list">
-  <table>
+<div class="table-responsive">
+  <table class="table table-striped table-condensed table-hover">
     <thead>
       <th>{{ 'ID'|trans }}</th>
       <th>{{ 'Identifier'|trans }}</th>
@@ -18,10 +18,9 @@
       <th>{{ 'Long name (translated)'|trans }}</th>
     </thead>
     <tbody>
-      {% set i = 0 %}
       {% for title in titles %}
         {% if title.title_identifier != 'NO_TITLE' %}
-          <tr class="{{ cycle(['flop','flip'], i) }}">
+          <tr>
             <td class="title_id"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{title_id}':title.title_id}) }}">{{ '%03d'|format(title.title_id) }}</a></td>
             <td class="title_identifier"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{title_id}':title.title_id}) }}">{{ title.title_identifier|upper }}</a></td>
             <td class="title_short">{{ title.title_short }}</td>
@@ -29,7 +28,6 @@
             <td class="title_long">{{ title.title_long }}</td>            
             <td class="title_long translated">{{ title.title_long }} &rArr; {{ title.title_long|trans }}</td>
           </tr>
-          {% set i = i+1 %}
         {% endif %}
       {% endfor %}
     </tbody>
