--- a/Template/default/bootstrap/pattern/alert.twig
+++ b/Template/default/bootstrap/pattern/alert.twig
@@ -7,4 +7,7 @@
   @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
-<div class="message item">{{ message }}</div>
+<div class="alert {{ type|default('alert-info') }}">
+  <a class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</a>
+  {{ content }}        
+</div>
