output template name as comment

--- a/Template/default/admin/import/execute.keepintouch.twig
+++ b/Template/default/admin/import/execute.keepintouch.twig
@@ -13,6 +13,7 @@
 {% endblock %}
 
 {% block content %}
+  <!-- {{ _self.getTemplateName() }} -->
   <div class="container">
     <div class="panel panel-primary">
       <div class="panel-heading">{{ 'Import contacts from KeepInTouch (KIT)'|trans }}</div>
