--- a/Template/default/admin/about.twig
+++ b/Template/default/admin/about.twig
@@ -26,6 +26,7 @@
 {% block title %}{{ 'Contact Administration - About'|trans }}{% endblock %}
   
 {% block content %}
+  <!-- {{ _self.getTemplateName() }} -->  
   <div class="container">
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' %}
     {# use the standard 'about' dialog from BASIC #}
