--- a/Template/default/admin/edit.contact.twig
+++ b/Template/default/admin/edit.contact.twig
@@ -29,6 +29,7 @@
 {% block title %}{{ 'Contact Administration - Create or edit contact'|trans }}{% endblock %}
 
 {% block content %}
+  <!-- {{ _self.getTemplateName() }} -->  
   <div class="container">
     
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} %}
