--- a/Template/default/admin/edit.tag.twig
+++ b/Template/default/admin/edit.tag.twig
@@ -26,6 +26,7 @@
 {% block title %}{{ 'Contact Administration - Tags'|trans }}{% endblock %}
 
 {% block content %}
+  <!-- {{ _self.getTemplateName() }} -->
   <div class="container">
     
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} %}
