--- a/Template/default/admin/list.contact.twig
+++ b/Template/default/admin/list.contact.twig
@@ -26,9 +26,10 @@
 {% block title %}{{ 'Contact Administration - Extra fields'|trans }}{% endblock %}
 
 {% block content %}
+  <!-- {{ _self.getTemplateName() }} -->  
   <div class="container">
     {% include '@phpManufaktur/Contact/Template/default/admin/toolbar.twig' with {toolbar: extra.toolbar} only %}
-    
+    <div class="height-15"></div>
     {% include '@phpManufaktur/Contact/Template/default/pattern/admin/simple/list.contact.twig' %}
   </div>
 {% endblock content %}
